[gd_scene load_steps=4 format=3 uid="uid://tower001"]

[ext_resource type="Script" path="res://scripts/towers/tower.gd" id="1"]
[ext_resource type="Texture2D" path="res://assets/sprites/towers/arrow_tower.png" id="2"]
[ext_resource type="PackedScene" path="res://scenes/projectiles/projectile.tscn" id="3"]

[sub_resource type="CircleShape2D" id="CircleShape2D_range"]
radius = 150.0

[node name="Tower" type="Node2D"]
script = ExtResource("1")
projectile_scene = ExtResource("3")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2")
scale = Vector2(2, 2)

[node name="RangeArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="RangeArea"]
shape = SubResource("CircleShape2D_range")

[node name="Barrel" type="Marker2D" parent="."]
position = Vector2(0, -16)

[node name="ShootTimer" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="RangeArea" to="." method="_on_range_area_area_entered"]
[connection signal="area_exited" from="RangeArea" to="." method="_on_range_area_area_exited"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
